
=======================================================
            WanT code:  Log of Changes 
=======================================================


03 Jan 2009      Bug fixed in the documentation (definition of froz_min);
                 Courtesy of Regina Lelis de Sousa. Implementation of
                 eigenchannles added in conductor.x: only eigenvalues are
                 computed. (AF)

31 Jan 2009      Bug fixed in etsf_io interface. Clenaup of unused variables
                 all around. Interface to ETSF_IO working. Examples of Abinit 
                 usage added to test01, test03. (AF)

30 Jan 2009      Interface to etsf_io (eg Abinit) working upto read-in of
                 wfc and wfc grids. makedeps.sh updated to avoid error
                 messages generated by special modules like etsf_io etc. (AF)

28 Jan 2009      Plugins are almost properly compiling. Configuration machinery
                 updated. Further changes to plugins Makefile system. 
                 Inclusion of ETSF_IO lib started. (AF)

27 Jan 2009      plugins tree added to want distribution: useful to treat
                 external libs and interfaces to Abinit, etc. (AF)

14 Jan 2009      debug_level variable added to WanT PPs. Documentation for
                 midpoint program added. (AF)

05 Jan 2009      References in test03 updated. Io_name routine generalize to
                 deal also with transport files. (AF)

04 Jan 2009      Bug fixed in bcast of rovp in hamiltonian_read; it
                 was shown only by blc2wan.x (AF)

01 Jan 2009      Happy new year. (AF)

28 Dec 2008      cmplx_bands.f90 and dos.f90 parallelized over energies
                 and kpts respectively. (AF)

27 Dec 2008      bands.f90 program made parallel over kpts.
                 Test script-system updated to take into account parallelism
                 (which can be manually switched off). AF

25 Dec 2008      Bug fixed in ~want/libs (zmat_hdotp). Merry Christmas. 